--- a/src/Pages/Home/ResaleAbout/ResaleAbout.css
+++ b/src/Pages/Home/ResaleAbout/ResaleAbout.css
@@ -8,7 +8,7 @@
 .introducing_team_info h2 {
   font-size: 48px;
   font-weight: 600;
-  color: var(--heading-color);
+  color: #214167;
   margin-bottom: 20px;
 }
 .introducing_team_info span {
@@ -19,15 +19,14 @@
   display: inline-block;
 }
 .introducing_team_info p {
-  color: var(--paragraph-color);
   line-height: 28px;
   font-weight: 500;
 }
 
 .about_img img {
   width: 100%;
-  border: 5px solid grey;
-  padding: 10px;
+  border: 8px solid gray;
+  padding: 6px;
   border-radius: 10px;
 }
 
